--- a/user-details.html
+++ b/user-details.html
@@ -83,7 +83,7 @@
           Height (cm)
           <span 
             class="info" 
-            title="If you are unsure about your height and weight, kindly visit the institute health center or our lab (305, 4D Building) for measurement."
+            data-tooltip="If you are unsure about your height, kindly visit the institute health center or SIRL-IISERB (305, 4D Building) for measurement."
           >
             i
           </span>
@@ -98,7 +98,7 @@
           Weight (kg)
           <span 
             class="info" 
-            title="If you are unsure about your height and weight, kindly visit the institute health center or our lab (305, 4D Building) for measurement."
+            data-tooltip="If you are unsure about your weight, kindly visit the institute health center or SIRL-IISERB (305, 4D Building) for measurement."
           >
             i
           </span>
