--- a/tracker.html
+++ b/tracker.html
@@ -16,31 +16,26 @@
     </header>
     <main>
       <section class="card">
-        <h2>Step Count</h2>
+        <h2>Step Count (Today)</h2>
         <p id="step-count">0</p>
       </section>
 
       <section class="card">
-        <h2>Distance Traveled (km)</h2>
+        <h2>Distance Traveled (km Today)</h2>
         <p id="distance-traveled">0.00</p>
       </section>
 
       <section class="card">
-        <h2>Sleep Hours</h2>
-        <p id="sleep-hours">0</p>
-        <div class="sleep-btns">
-          <button id="start-sleep-btn">Start Sleep</button>
-          <button id="stop-sleep-btn" disabled>Stop Sleep</button>
-        </div>
-      </section>
-
-      <!-- NEW: Sedentary Hours Section -->
-      <section class="card">
-        <h2>Sedentary Hours</h2>
+        <h2>Sedentary Hours (Today)</h2>
         <p id="sedentary-hours">0.0</p>
       </section>
-      <!-- End Sedentary Section -->
 
+      <!-- Sleep Hours (auto-detected) -->
+      <section class="card">
+        <h2>Sleep Hours (Today)</h2>
+        <p id="sleep-hours">0.0</p>
+      </section>
+      <!-- End Sleep Section -->
     </main>
   </div>
 
